PLF-2756: move JVM memory parameters to correct file