@@ -56,7 +56,7 @@ DEBUG_MODE="-Dexo.product.developing=true"
 
 if [ "$1" = "" ] ; then 
 	EXO_PROFILES="-Dexo.profiles=default"
-	CATALINA_OPTS="-Xms256m -Xmx1024m -XX:MaxPermSize=256m $CATALINA_OPTS $EXO_PROFILES"
+	CATALINA_OPTS="$CATALINA_OPTS $EXO_PROFILES"
 else
         if [ "$1" = "-debug" ]; then
                 if [ "$2" = "" ]; then
@@ -64,11 +64,11 @@ else
 	        else
 	                EXO_PROFILES="-Dexo.profiles=$2"
 	        fi
-        	CATALINA_OPTS="-Xms256m -Xmx1024m -XX:MaxPermSize=256m $CATALINA_OPTS $EXO_PROFILES $DEBUG_MODE $EXO_CONFIG $REMOTE_DEBUG"  
+        	CATALINA_OPTS="$CATALINA_OPTS $EXO_PROFILES $DEBUG_MODE $EXO_CONFIG $REMOTE_DEBUG"  
                 echo This is debug mode        	      
 	else
 	        EXO_PROFILES="-Dexo.profiles=$*"
-        	CATALINA_OPTS="-Xms256m -Xmx1024m -XX:MaxPermSize=256m $CATALINA_OPTS $EXO_PROFILES"
+        	CATALINA_OPTS="$CATALINA_OPTS $EXO_PROFILES"
 	fi
 fi
 
